--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "Tuomas Kanerva",
   "license": "MIT",
   "dependencies": {
-    "q": "^1.2.0"
+    "q": "^1.2.0",
+    "underscore-contrib": "^0.3.0"
   },
   "devDependencies": {
     "chai": "^2.1.0"
